<resources>
    <string name="app_name">Trello</string>
    <string name="application_icon">Application icon</string>
    <string name="log_in">Log in</string>
    <string name="sign_up">Sign up</string>
    <string name="intro_images">Intro Images</string>
    <string name="tab_layout">Tab layout</string>
    <string name="intro_title_1">Get more done with Trello</string>
    <string name="intro_title_2">Get organized</string>
    <string name="intro_title_3">Add details</string>
    <string name="intro_title_4">Team up</string>
    <string name="intro_des_1">Plan, track, and organize pretty much anything with anyone.</string>
    <string name="intro_des_2">Make a Trello board to organize anything with anyone.</string>
    <string name="intro_des_3">Open cards to add pictures, checklists, and more.</string>
    <string name="intro_des_4">Invite people to join your board, all for free</string>
    <string name="please_wait">Please wait…</string>
    <string name="enter_your_email_and_password_to_register_with_us">Enter your email and password to register With us.</string>
    <string name="enter_your_email_and_password_to_log_in">Enter your email and password to log in.</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="or">OR</string>
    <string name="continue_with_google">Continue with Google</string>
    <string name="google_icon">Google icon</string>
    <string name="don_t_have_an_account">Don\'t have an account</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="back">Back</string>
    <string name="name">Name</string>
    <string name="please_fill_all_the_required_fields">Please fill all the required fields.</string>
    <string name="no_such_user_exist">No such user exist.</string>
    <string name="wrong_email_or_password_added">Wrong email or password added.</string>
    <string name="network_unavailable">Network unavailable</string>
    <string name="web_client_id">518024410193-p2kr6a76o13f93ojif65v9m1coak84vg.apps.googleusercontent.com</string>
    <string name="my_profile">My profile</string>
    <string name="sign_out">Sign out</string>
    <string name="line">Line</string>
    <string name="person">Person</string>
    <string name="edit_name_button">Edit name button</string>
    <string name="mobile">Mobile</string>
    <string name="profile_photo">Profile photo</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="choose_image_from_gallery">Choose image from gallery</string>
    <string name="get_mage_using_camera">Get mage using camera</string>
    <string name="edit_text">edit text</string>
    <string name="enter_the_text">Enter the text</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="enter_your_mobile_number">Enter your mobile number</string>
    <string name="create_board">Create board</string>
    <string name="board_name">Board name</string>
    <string name="create">Create</string>
    <string name="no_boards_are_available">No boards are available!!</string>
    <string name="created_by">Created by</string>
    <string name="add_list">Add list</string>
    <string name="image">Image</string>
    <string name="list_name">List name</string>
    <string name="title">Title</string>
    <string name="card_name">Card name</string>
    <string name="add_card">Add card</string>
    <string name="cant_create_empty_task">Can\'t create empty task.</string>
    <string name="cant_create_empty_card">Can\'t create empty cards.</string>
    <string name="members">Members</string>
    <string name="add_member">Add member</string>
    <string name="add">Add</string>
    <string name="member_already_assigned">Member already assigned.</string>
    <string name="delete_card">Delete card</string>
    <string name="label_color">Label color</string>
    <string name="due_date">Due date</string>
    <string name="members_list">Members list</string>
    <string name="click_to_see_members">Click to see members</string>
    <string name="enter_card_name">Enter card name</string>
    <string name="enter_members_email">Enter members email</string>
    <string name="confirm">Confirm</string>
    <string name="first_add_this_member_to_the_board">User not assigned to the board</string>
    <string name="default_notification_channel_id">trello_notification_channel_id</string>
</resources>