<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.LogInActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent">
        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolBar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:contentInsetStart="0dp"
            app:contentInsetStart="0dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <ImageButton
                    android:id="@+id/backBtn"
                    android:layout_width="?attr/actionBarSize"
                    android:layout_height="?attr/actionBarSize"
                    android:contentDescription="@string/back"
                    android:background="@color/transparent"
                    android:src="@drawable/ic_baseline_arrow_back_ios_24"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="?attr/actionBarSize"
                    android:text="@string/log_in"
                    android:textColor="@color/white"
                    android:textSize="26sp"
                    android:gravity="center_vertical"
                    android:layout_marginStart="16dp"/>

            </LinearLayout>
        </androidx.appcompat.widget.Toolbar>
    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@id/appBarLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/transparent">

            <ImageView
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:contentDescription="@string/application_icon"
                android:src="@drawable/logo_blue"
                tools:tint="@color/main_color"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:text="@string/app_name"
                android:gravity="center_vertical"
                android:textSize="48sp"
                android:layout_marginStart="10dp"
                android:textStyle="bold"
                android:textColor="@color/main_color_variant"
                android:fontFamily="@font/saklifie"/>

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxWidth="200dp"
            android:gravity="center"
            android:layout_marginTop="60dp"
            android:textStyle="bold"
            android:text="@string/enter_your_email_and_password_to_log_in"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/emailTIL"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_marginHorizontal="32dp"
            android:layout_marginTop="48dp"
            android:hint="@string/email"
            app:boxStrokeColor="@color/main_color"
            app:hintTextColor="@color/main_color">

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/emailET"
                android:layout_width="match_parent"
                android:layout_height="47dp"
                android:inputType="textEmailAddress"
                android:padding="5dp"
                android:text=""
                android:textColor="@color/black"
                android:textSize="17sp"
                tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck">

            </androidx.appcompat.widget.AppCompatEditText>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/passwordTIL"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_marginHorizontal="32dp"
            android:layout_marginTop="10dp"
            android:hint="@string/password"
            app:boxStrokeColor="@color/main_color"
            app:hintTextColor="@color/main_color">

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/passwordET"
                android:layout_width="match_parent"
                android:layout_height="47dp"
                android:inputType="textPassword"
                android:padding="5dp"
                android:text=""
                android:textColor="@color/black"
                android:textSize="17sp"
                tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck">

            </androidx.appcompat.widget.AppCompatEditText>

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/log_in_btn"
            android:layout_width="match_parent"
            android:layout_height="54dp"
            android:layout_marginHorizontal="32dp"
            android:layout_marginTop="48dp"
            android:text="@string/log_in"
            android:textColor="@color/white"
            tools:ignore="DuplicateSpeakableTextCheck" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/or"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/don_t_have_an_account"/>

            <TextView
                android:id="@+id/change_to_sign_up_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:clickable="true"
                android:focusable="true"
                android:text="@string/sign_up"
                android:textColor="@color/main_color_variant"
                android:textStyle="bold"
                tools:ignore="TouchTargetSizeCheck" />
        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>