<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_member"
        android:textColor="@color/black"
        android:textSize="22sp"
        android:textStyle="bold"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/ti_email"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="16dp"
        android:hint="@string/email"
        android:textColorHint="@color/grey"
        app:boxStrokeColor="@color/main_color"
        app:hintTextColor="@color/main_color"
        app:startIconCheckable="true"
        app:startIconDrawable="@drawable/ic_baseline_email_24"
        app:startIconTint="@color/grey">

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/et_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:text=""
            android:textColor="@color/black"
            android:textSize="16sp">

        </androidx.appcompat.widget.AppCompatEditText>

    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:id="@+id/ll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ti_email">

        <Button
            android:id="@+id/btn_cancel_member"
            android:layout_width="110dp"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:backgroundTint="@color/grey"
            android:layout_marginEnd="20dp" />

        <Button
            android:id="@+id/btn_add_member"
            android:layout_width="110dp"
            android:layout_height="wrap_content"
            android:text="@string/add"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:layout_marginStart="20dp"/>

    </LinearLayout>

</LinearLayout>