<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    xmlns:tools="http://schemas.android.com/tools"
    tools:background="@color/main_color"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/ll"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:gravity="center"
        android:layout_marginBottom="10dp"
        android:background="@color/transparent">

        <ImageView
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_gravity="center"
            android:contentDescription="@string/application_icon"
            android:src="@drawable/logo"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:gravity="center"
            android:text="@string/app_name"
            android:textColor="@color/white"
            android:fontFamily="@font/saklifie"
            android:layout_marginStart="8dp"
            android:textSize="24sp"/>

    </LinearLayout>

    <ImageView
        android:id="@+id/introImageIV"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:contentDescription="@string/intro_images"
        android:src="@drawable/intro_img_4"/>

    <TextView
        android:id="@+id/featureTitleTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="Get more done with Trello"
        android:textColor="@color/white"
        android:layout_marginTop="10dp"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginBottom="10dp"/>

    <TextView
        android:id="@+id/featureDescriptionTV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:text="Plan, track, and, organise pretty much anything with anyone"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:layout_marginHorizontal="55dp"
        android:gravity="center"
        android:layout_marginBottom="2dp"/>
</LinearLayout>