<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_color"
    android:orientation="vertical"
    tools:context=".activities.IntroActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.7"
        android:paddingTop="60dp"
        android:orientation="vertical">

        <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/introSliderViewPager"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.92"
            tools:ignore="NestedWeights" />

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/introSliderTabLayout"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.08"
            android:contentDescription="@string/tab_layout"
            app:tabGravity="center"
            app:tabPaddingStart="6dp"
            app:tabPaddingEnd="6dp"
            app:tabIndicator="@null"
            app:tabBackground="@drawable/selector_tab_indicator_dot"
            android:background="@color/transparent"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.3"
        android:gravity="center"
        android:layout_marginBottom="18dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/log_in_btn"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:background="@drawable/log_in_btn_bg"
            android:text="@string/log_in"
            android:gravity="center"
            android:textSize="22sp"
            android:layout_marginBottom="8dp"
            android:layout_marginHorizontal="32dp"
            android:elevation="2dp"
            android:textColor="@color/main_color"
            android:clickable="true"
            android:focusable="true" />

        <TextView
            android:id="@+id/sign_up_btn"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginTop="8dp"
            android:layout_marginHorizontal="32dp"
            android:background="@drawable/sign_up_btn_bg"
            android:text="@string/sign_up"
            android:gravity="center"
            android:textSize="22sp"
            android:elevation="2dp"
            android:textColor="@color/white"
            android:clickable="true"
            android:focusable="true" />


    </LinearLayout>

</LinearLayout>